--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .DS_Store
 
+# Binary
+tvthailand-api
+
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
@@ -26,3 +29,4 @@ _testmain.go
 
 # atom
 .idea
+
